# eigenriver

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/app/: main.py  settings.py  win_cuda_path.py
backend/app/routes/: asr_ws.py  intent.py
backend/app/schemas/: intent_schema.py
backend/app/services/: asr_stream.py  asr_vosk.py  cerebras.py  game_logger.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: StartScreen.tsx
frontend/src/engine/: InstancedRenderer.ts  SoundManager.ts  WaveManager.ts  gameState.ts  renderer.ts
frontend/src/input/asr/: wsClient.ts
frontend/src/input/gestures/: recognizer.ts
frontend/src/input/mediapipe/: handTracker.ts
frontend/src/input/vad/: webrtc.ts
frontend/src/voice/: router.ts  schema.ts
